# ai-image

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: build-portable.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agnes_models.rs  config.rs  config_store.rs  error.rs  gallery_cache.rs  lib.rs  main.rs  types.rs  video_progress.rs
src-tauri/src/commands/: agnes_models.rs  batch_generate.rs  config.rs  gallery.rs  generate.rs  mod.rs  optimize.rs  provider_models.rs  retry_download.rs  updater.rs  video.rs  video_gallery.rs
src-tauri/src/providers/: agnes.rs  gemini.rs  mod.rs  modelscope.rs  nvidia.rs  openai.rs  openrouter.rs  siliconflow.rs
src-tauri/updater/: latest.json
src/components/: Dialog.vue  ImageInput.vue
src/components/ui/: badge.ts  badge.vue  button.vue  card-content.vue  card-description.vue  card-header.vue  card-title.vue  card.ts  card.vue  separator.vue
src/lib/: tauri.ts  utils.ts
src/stores/: gallery.ts  generation.ts  videoGallery.ts  videoGeneration.ts
src/views/: AboutView.vue  GalleryView.vue  GenerateView.vue  LogView.vue  SettingsView.vue  VideoGalleryView.vue  VideoGenerateView.vue
