[package]
name = "ai-image-v2"
version = "2.0.2"
description = "AI Image Generator - Tauri + Vue"
authors = ["ai-image"]
edition = "2021"

[lib]
name = "ai_image_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenv = "0.15"
chrono = "0.4"
anyhow = "1"
thiserror = "1"
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
